Updated homepage content

--- a/_teaching/2024Fall_CSE463.md
+++ b/_teaching/2024Fall_CSE463.md
@@ -1,14 +1,16 @@
 ---
 title: "CSE463: Introduction to Human-Computer Interaction"
 collection: teaching
-type: "Undergraduate course"
+type: "Teaching Assistant"
 permalink: /teaching/2024_CSE463
 venue: "Arizona State University, School of Computing and Augmented Intelligence"
 date: 2024-09-01
+date_display: "2024 Fall"
+disable_title_link: true
 location: "Tempe, AZ, USA"
 ---
 
-This is a description of a teaching experience. You can use markdown like any other post.
+
 
 Heading 1
 ======
